--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 header
 {
 	background: black;
-	display: inline-block;
+	display: flex;
+	align-content: center;
 }
 .header-right
 {
@@ -31,11 +32,15 @@ a
 	border: none;
 	text-decoration: none;
 }
-a:hover
+.header-right a:hover
 {
 	color: green;
 }
-.header-right ul li:active
+.header-right .active a
+{
+	color: green;
+}
+.header-right .active
 {
 	border-bottom: 1px solid green;
 }
@@ -47,4 +52,21 @@ a:hover
 {
 	text-align: center;
 	padding: 0 100px;
+}
+.contact
+{
+	padding: 100px;
+}
+.contact p
+{
+	border: 1px solid black;
+	text-align: center;
+	padding: 50px 0px;
+	font-size: larger;
+}
+.contact a
+{
+	color: black;
+	font-weight: bolder;
+	font-style:italic;
 }
