--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ a
 .heading-main
 {
 	text-align: center;
+	padding: 30px 0;
 }
 .main-body p
 {
@@ -55,7 +56,7 @@ a
 }
 .contact
 {
-	padding: 100px;
+	padding: 50px 100px;
 }
 .contact p
 {
