--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 .header-left img
 {
-	width: 40%;
+	width: 45%;
 	margin-left: 100px;
 	padding: 8px;
 }
 header
 {
 	background: black;
-	display: flex;
-	align-content: center;
+	height: 100px;
 }
 .header-right
 {
 	float: right;
+	height: 100px;
 }
 .header-left
 {
 	float: left;
+	height: 100px;
 }
 .header-right ul li
 {
@@ -70,4 +71,45 @@ a
 	color: black;
 	font-weight: bolder;
 	font-style:italic;
+}
+.container *
+{
+	box-sizing: border-box;
+}
+.container 
+{
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px 100px;
+	margin: 0 50px;
+}
+.col-10 
+{
+	float: left;
+	width: 10%;
+	margin-top: 6px;
+}
+.col-20 
+{
+	float: left;
+	width: 20%;
+	margin-top: 6px;
+}
+.col-25 
+{
+	float: left;
+	width: 25%;
+	margin-top: 6px;
+}		
+.col-50 
+{
+	float: left;
+	width: 50%;
+	margin-top: 6px;
+}
+.row:after 
+{
+	content: "";
+	display: table;
+	clear: both;
 }
